--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 /node_modules
 /.pnp
 .pnp.js
+App.test.js
+serviceWorker.js
+package-lock.json
 
 # testing
 /coverage
@@ -21,3 +24,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
