--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "bootstrap": "^4.1.1",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
+    "react-csv": "^1.0.19",
     "react-dom": "^16.6.3",
+    "react-file-reader": "^1.1.4",
     "react-scripts": "2.1.1"
   },
   "scripts": {
