--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.1",
+    "papaparse": "^4.6.3",
     "react": "^16.6.3",
     "react-bootstrap": "^0.32.4",
     "react-csv": "^1.0.19",
